# ChangeLog for media-libs/cogl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/cogl/ChangeLog,v 1.59 2015/06/14 13:32:27 pacho Exp $

  14 Jun 2015; Pacho Ramos <pacho@gentoo.org> cogl-1.20.0.ebuild, metadata.xml:
  Stop using clutter.eclass

  11 Jun 2015; Pacho Ramos <pacho@gentoo.org> -cogl-1.18.2.ebuild:
  Drop old

*cogl-1.20.0 (08 Jun 2015)

  08 Jun 2015; Gilles Dartiguelongue <eva@gentoo.org> +cogl-1.20.0.ebuild:
  Version bump for Gnome 3.16.

  31 Mar 2015; Ulrich Müller <ulm@gentoo.org> cogl-1.18.2.ebuild,
  cogl-1.18.2-r1.ebuild:
  Update dependency after package move of eselect modules to app-eselect.

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> cogl-1.18.2-r1.ebuild:
  x86 stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> cogl-1.18.2-r1.ebuild:
  amd64 stable, bug 534012

*cogl-1.18.2-r1 (23 Dec 2014)

  23 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org> -cogl-1.16.2.ebuild,
  -cogl-1.18.0.ebuild, +cogl-1.18.2-r1.ebuild,
  -files/cogl-1.10.4-cogl-clipping.xml.patch,
  -files/cogl-1.14.1-framebuffer-allocate.patch, metadata.xml:
  Version bump for Gnome 3.14. Clean up old revisions.

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> cogl-1.18.2.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> cogl-1.18.2.ebuild:
  Stable for amd64, wrt bug #512912

*cogl-1.18.2 (05 Jul 2014)

  05 Jul 2014; Pacho Ramos <pacho@gentoo.org> +cogl-1.18.2.ebuild:
  Version bump

*cogl-1.18.0 (27 Apr 2014)

  27 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org> +cogl-1.18.0.ebuild:
  Version bump for Gnome 3.12.

  18 Apr 2014; Pacho Ramos <pacho@gentoo.org> -cogl-1.10.4.ebuild,
  -cogl-1.14.1_pre20130901-r1.ebuild, -cogl-1.16.0.ebuild:
  Drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> cogl-1.16.2.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> cogl-1.16.2.ebuild:
  amd64 stable, bug 499954
