@@ -3,14 +3,26 @@ Hash: SHA256
 
 DIST cogl-1.18.2.tar.xz 1635384 SHA256 9278e519d5480eb0379efd48db024e8fdbf93f01dff48a7e756b85b508a863aa SHA512 c8903a10c476850c77f71eba584854bccf26adae6f62a9232adf8baf728fe2b69273bd5cd5418e7cd72801a2c0e4c85ef8afc08e28ebd5016b81693aef2ecab8 WHIRLPOOL e7538b92af2efe2f3845fde5c97ba9744d53ddb7a05eadb3cf310c43a3536a41001e4a0596a593ae3cfede4a02115a1d9be8aa423e9c814675059f0f777ec4a5
 DIST cogl-1.20.0.tar.xz 1669620 SHA256 729e35495829e7d31fafa3358e47b743ba21a2b08ff9b6cd28fb74c0de91192b SHA512 a7c50072ef5660a4fff8d3843ede86178e5c4bcc635eb24c1e16f73422f57596b91a2c78a73a5e01f6f4b9c96509c7c648729f748b2fec4b8ad0f332cd5e0bd1 WHIRLPOOL 9756e8b0c1503ff9e06b926d82620692d0e22ac7acf68f90461d4ae982d758733de47084fa4a80c531500f47b2ff109e07b3f0300aa9fcaf5b05f607a8252fa1
-EBUILD cogl-1.18.2-r1.ebuild 3920 SHA256 c224aff4194c957bab22e12a8bee7d96f4b111ebf78a73ecf71b77f624a3561e SHA512 734da9e6e9729aac6896979d857abcafb58711a01d74d5ccd06ec87ca0ff938a1fb7e40ea4820f7bc45e46c27222a94880be2d63974f9806ce214014742cfb1a WHIRLPOOL f1e011a7e1da1e988f63e39aae1a34fdd35c5c26b82b0cf132cd43cbd04f63e7a2055ccc0b464c3720348464e3d4b52ff1bbdfbe017a20d7e2b3f06947a88690
-EBUILD cogl-1.20.0.ebuild 3890 SHA256 c3910f38e937cf7b24bb6d669e3e9f9bfdbcdfacfa42446cc2c3fcfecc5f44a8 SHA512 831cbae0d96fd206cf64e42e8c95a164a61998c38ea9fc8a43ecf73310d2ff4af975e30c438db4c36011482c2cda1a8148386f004ac422780b6f5e64b96a5234 WHIRLPOOL 02560aaaf9827d0202074f035ec5569347ec29bdbbe4133dad49575b48c9d727f6e384274f0ef08d09908f612ad89e9fff5a4dce6e5335a4201098a4a527548a
-MISC ChangeLog 8833 SHA256 58e5162f72ceaf16981740d7779a9a775f0b60f00849e341f1b6f20a761d0a75 SHA512 3af869738e106a0f73b8454b1c644173eccaafaed1de4dc0ab3b76d97d5569dea6240396ce36e70a66011b8c6f84b7aa744a604a9f836a14df7c3392edf30074 WHIRLPOOL 975b38743be089375e02cbfb253b3aac3cb0a0e5ca0eb2d4fc0c10f3a68de7ebf4306c36ff39cc1c7eb1593b54b213af82e898ce42a30e4fc434eaf33d2fc3f3
+EBUILD cogl-1.18.2-r1.ebuild 3947 SHA256 6594118982fc67640b79639c262ee6f69055777449a974b319dc62e8f3bcd8a9 SHA512 19842411635a3c74e19d3b56daf7724dbd2d48ba5469e75e37aa9cd49a112ebb107f802969939da29467ee2a47baaf67aca88d6dbc24d5b1e2b98ffe2404ffa9 WHIRLPOOL 128eb649c5f425b8cee5665f0c222612f0de0b660f188a98c15180e1361df415228cd6fd9c0c492455e4551c5a12e7f2209d10c9aa4f8fe88d98a885b50edb3f
+EBUILD cogl-1.20.0.ebuild 3914 SHA256 f2bf8a3ec7bd681ebf049074d888b7a56045825647ec488fc6b9bb61fc3bb29d SHA512 fe878524c0f59585f0c5f46fb8f005a9c4e96ba803406f3ab98f49bf49b941678f8ad595e7f5b8648bdcda75a66cb7bd1e9f8aeaa953ea26bdc83196eefea85f WHIRLPOOL 31d5ab802147bb1a3090a72b2b6d7d6ceac504218ebccc6d16989bffddac5052793f8089c0495256492a09fbb511332e89850360818d2addb0360f8fcea684b2
+MISC ChangeLog 9035 SHA256 8b8656c7cf28061acd68c639343fd12b07665728397c8da3a47a86222230e7b9 SHA512 626bba18add6e61964a055886ab1fbe365bc75ffe3288accd21f1662e9a831e0dd2bdf095355dbaa6a64aad4d13357d068a2069c3537fd5782c36e864656fe0e WHIRLPOOL e2e0f272c3be585c057889e31065d56a5f21562b165ccef36e1bb40161b7cd26ba32db9b53daed8efbef68a810ffc890db35da5f5334ef828986678a61aa5d6d
 MISC metadata.xml 366 SHA256 e10c0ee7db816af4d663a62ec154c397b940005c0921c02948fec607b014afa1 SHA512 b43718e3efe1787d624d9ae3f04abb6f9812e00616439cc7d3d3ff62400b4a8c570b6919b35a6d87e15eaa3ac6e80e3637dfb18ea771aa5f5d5fd5531e6e8112 WHIRLPOOL 9e9be44c2ebf2540d584db3b614270975147c8f8990e473d128def1ec9d97edbe4f42349bc0aa931efc9e5eb881a41610c3ec765cfbddbd02fe7c2a19df0bf6f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iEYEAREIAAYFAlV9gmwACgkQCaWpQKGI+9ShJQCfcapKnSdr9h8EITD6SihW+9Jb
-IDsAn3mFLfP9ZQ86dLy3geyv3tSdVg7d
-=z9X7
+iQJ8BAEBCABmBQJVtjJMXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RTNCRkUzRDRBNkI2MEEwQkYwQzMyOEEx
+OEU1QjZGMkQ4RDVFQzhEAAoJEBjltvLY1eyNFUEQAKRSWlKPT26o+nuMSACrEMNh
+OaEV+hi7cGU/Gmoa5KYt0cHj+PM9qZrl4yie+RgRTv3PiAPPQj506RdcIbYaHr0m
+tiiktzluLSN7lHCBkMX8oKmU1nGRBnTScKzytNjziwFZ4OX5sZWiijhp+Sypl0aQ
+BrpHCnlWQGJbs6/8zw7LYeDdfwYe+4rkZ7j7Q361Q2+rLsGDkbc/7d1hOShKdBBH
+p29Tj+J0PkD/+iExMZKAS7TWCPUr1vAcNRAmbA+fCRHBN+zeM20zPbymBHRQKL4C
+QoPvhLtQ2uQSab3dX9wLlZ6Mg1mpsrIRrjjyLDqSGrucnDJ+0ILh7GYkIUVs4xo4
+NoK7guEEz+D3Uz6xT9FV/AQrOpUFD8+9PEdO0fgHR74AkoX4+VxYu4sOsVMT8tqi
+xTdGOKMYDRQW50a8vY/Hnk83w5yCAgO3RuLspSmHN/v8Fdn967kZgnk2np+xeXQG
+e14DX456g5QjyCsO9GyBfmN6wl6CjySOlo/Degz0smnPi9PK1KMvGaayhTJGntYR
+8phdYiIWZ5h8TO9zKRJmp0zF0psrqJTS8T47arikE86wimBruarhAQSUYRWFcf/n
+P/JSwXndfjBB78pl11VVQx+1AsOscxY0AqhU8S6/m/6mTfT4e7ULwuuFWEEchn5t
+5E6ga7G3vTQtJJVgBgZd
+=csPt
 -----END PGP SIGNATURE-----
